--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <nav class="nav-menu">
                     <ul>
-                        <li> <a href="harrypotter.html">ホグワーツ名簿</a> </li>
+                        <li> <a href="index.html">ホグワーツ名簿</a> </li>
                         <li> <a href="chizu.html">忍びの地図</a> </li> 
                         <li> <a href="">作品</a> </li>
                         <li> <a href="">その他</a> </li>
@@ -27,7 +27,7 @@
                     <label for="button" class="menu-button"><span></span></label>
                     <nav class="nav-smartphone">
                     <ul>
-                        <li> <a href="harrypotter.html">ホグワーツ名簿</a> </li>
+                        <li> <a href="index.html">ホグワーツ名簿</a> </li>
                         <li> <a href="chizu.html">忍びの地図</a> </li> 
                         <li> <a href="">作品</a> </li>
                         <li> <a href="">その他</a> </li>
