--- a/potter/chizu.html
+++ b/potter/chizu.html
@@ -12,7 +12,7 @@
             <h1>Harry　Potter</h1>
             <nav class="nav-menu">
                     <ul>
-                        <li> <a href="harrypotter.html">ホグワーツ名簿</a> </li>
+                        <li> <a href="index.html">ホグワーツ名簿</a> </li>
                         <li> <a href="chizu.html">スポット</a> </li> 
                         <li> <a href="">作品</a> </li>
                         <li> <a href="">その他</a> </li>
@@ -23,7 +23,7 @@
                     <label for="button" class="menu-button"><span></span></label>
                     <nav class="nav-smartphone">
                     <ul>
-                        <li> <a href="harrypotter.html">ホグワーツ名簿</a> </li>
+                        <li> <a href="index.html">ホグワーツ名簿</a> </li>
                         <li> <a href="chizu.html">関連ショップ・アミューズメント施設</a> </li> 
                         <li> <a href="">作品</a> </li>
                         <li> <a href="">その他</a> </li>
