Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <ul>
                         <li> <a href="index.html">ホグワーツ名簿</a> </li>
                         <li> <a href="chizu.html">忍びの地図</a> </li> 
-                        <li> <a href="">作品</a> </li>
-                        <li> <a href="">その他</a> </li>
+                        <li> <a href="movie.html">作品</a> </li>
+                        <li> <a href="others.html">その他</a> </li>
                     </ul>
             </nav>
            <div class="hamburger-menu">
@@ -29,8 +29,8 @@
                     <ul>
                         <li> <a href="index.html">ホグワーツ名簿</a> </li>
                         <li> <a href="chizu.html">忍びの地図</a> </li> 
-                        <li> <a href="">作品</a> </li>
-                        <li> <a href="">その他</a> </li>
+                        <li> <a href="movie.html">作品</a> </li>
+                        <li> <a href="others.html">その他</a> </li>
                        
                     </ul>
                     </nav>
